fixing window cut off from padding

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -5,7 +5,7 @@
     max-width: 1200px;
     margin: 110px 350px 40px;
     align-items: center;
-    padding-top: 100px;
+    padding-top: 50px;
     box-sizing: border-box;
 }
 
