--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,6 +1,6 @@
 .edit_card {
 
-    margin-top: 210px;
+    margin-top: 160px;
     width: 30%;
     justify-self: center;    
     height: 600px;
