--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -18,7 +18,7 @@
 
 .edit-card {
     position: fixed;
-    top: 30%;
+    top: 15%;
     left: 30%;
     max-width: 960px;
     width: 40%;
