--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -4,7 +4,7 @@
     gap: 40px;
     max-width: 1100px;
     margin: 110px auto 40px;
-    padding-top: 100px;
+    padding-top: 50px;
     align-items: center;
     box-sizing: border-box;
 }
